add_subdirectory(lexer)
add_subdirectory(parser)
#add_subdirectory(codegen)
add_subdirectory(mir)
add_subdirectory(hir)
add_subdirectory(Lir)
add_subdirectory(toml)
add_subdirectory(Basic)

add_subdirectory(include)

add_subdirectory(ast)
add_subdirectory(sema)
add_subdirectory(analysis)

#add_subdirectory(moduleBuilder)
add_subdirectory(remarks)
add_subdirectory(crate_builder)
add_subdirectory(Optimizer)
add_subdirectory(TargetInfo)
add_subdirectory(ADT)
add_subdirectory(CrateLoader)
add_subdirectory(Serialization)
add_subdirectory(Frontend)
add_subdirectory(Mappings)
