add_subdirectory(Mir)
add_subdirectory(Toml)
add_subdirectory(AST)
add_subdirectory(Sema)
add_subdirectory(Analysis)
add_subdirectory(Lexer)
add_subdirectory(Parser)
add_subdirectory(Remarks)
add_subdirectory(ModuleBuilder)
add_subdirectory(Hir)
add_subdirectory(CrateBuilder)
add_subdirectory(Optimizer)
add_subdirectory(TargetInfo)
add_subdirectory(CodeGen)
add_subdirectory(ADT)
